--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
+    "@vueform/multiselect": "^2.0.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "tiny-emitter": "^2.1.0",
     "vue": "^3.1.1",
     "vue-router": "4"
   },
@@ -23,7 +28,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "node-sass": "^6.0.0",
-    "sass-loader": "^10"
+    "sass-loader": "^10.2.0"
   },
   "eslintConfig": {
     "root": true,
